# cclox

./: .gitignore  CMakeLists.txt  README.md  commit_types.md
build_support/: run_clang_tidy_extra.py
cclox/: CMakeLists.txt  ast_printer.cpp  ast_printer.h  environment.h  expr.h  interpreter.cpp  interpreter.h  lox.cpp  lox.h  main.cpp  object.cpp  object.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  token_type.h
src/: CMakeLists.txt  ast_printer.cpp  environment.cpp  interpreter.cpp  lox.cpp  lox_class.cpp  lox_function.cpp  lox_instance.cpp  object.cpp  parser.cpp  resolver.cpp  scanner.cpp  shell.cpp  token.cpp
src/include/: ast_printer.h  environment.h  expr.h  interpreter.h  lox.h  lox_callable.h  lox_class.h  lox_function.h  lox_instance.h  native_clock_function.h  native_function.h  object.h  parser.h  resolver.h  return.h  scanner.h  stmt.h  token.h  token_type.h
test/: CMakeLists.txt  expression_test.cpp  interpreter_test.cpp
test/assignment/: associativity.lox  global.lox  infix_operator.lox  local.lox  local.txt  syntax.lox  to_this.lox  undefined.txt
test/bool/: equality.lox  not.lox
test/call/: bool.txt  nil.lox  num.lox  object.lox  object.txt  string.lox
test/class/: egotist.lox  methods.lox  methods.txt  new_method.lox  new_method.txt
test/closure/: assign_to_closure.lox  assign_to_shadowed_later.lox  close_over_function_parameter.lox  close_over_method_parameter.lox  nested_closure.lox  shadow_closure_with_local.lox  unused_closure.lox
test/constructor/: basic.lox  basic.txt  valid_return.lox
test/field/: function_field.lox  method_binds_this.lox  nonfunction_field.lox  nonfunction_field.txt  on_instance.lox  undefined.lox  undefined.txt
test/for/: condition_error.lox  condition_error.txt  increment_error.lox  increment_error.txt  initializer_error.lox  initializer_error.txt  scope.lox  scope.txt  syntax.lox  syntax.txt  var_in_body.lox  var_in_body.txt
test/function/: invalid_func.lox  print_func.lox  recursion.lox  too_few_args.lox  too_few_args.txt  too_many_args.lox  too_many_args.txt
test/if/: dangling_else.lox  else.lox  else.txt  if.lox  if.txt  truth.lox  truth.txt  var_in_else.lox  var_in_if.lox
test/inheritance/: bare_super.lox  bare_super.txt  bound_method.lox  bound_method.txt  call_same_method.lox  constructor.lox  indirectly_inherited.lox  reassign_superclass.lox
test/logical_operator/: and_truth.lox  and_truth.txt  or_truth.lox  or_truth.txt
test/number/: leading_dot.lox  leading_dot.txt  trailing_dot.lox  trailing_dot.txt
test/operator/: add.lox  add.txt  comparison.lox  comparison.txt  divide.lox  divide.txt  equals.lox  multiply.lox  multiply.txt  negate.lox  not.lox  not.txt  subtract.lox  subtract.txt
test/string/: error_after_multiline.lox  error_after_multiline.txt
test/this/: closure.lox  nested_closure.lox  this_in_method.lox  this_in_top_level_func.lox
test/variable/: duplicate_parameter.lox  duplicate_parameter.txt
